Bump Lucene 2 → 3